Fix text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -50,10 +50,6 @@
 }
 
 .reader-content {
-    font-family: Charter, "Times New Roman", serif;
-    font-size: 18px;
-    line-height: 1.6;
-    text-align: left;
     animation: fadeIn 0.5s ease-in;
 }
 
@@ -96,7 +92,6 @@
 
 .reader-content p {
     margin-bottom: 1.2em;
-    text-align: justify;
     hyphens: auto;
 }
 
